[gd_scene load_steps=4 format=3 uid="uid://bo7yrajcric62"]

[ext_resource type="Texture2D" uid="uid://i2lhkpabcys4" path="res://fone/kandinsky-download-1709226065045.png" id="1_nuujm"]
[ext_resource type="Script" path="res://UI/ui.gd" id="1_vvtlp"]
[ext_resource type="AudioStream" uid="uid://dl2ivfps22r46" path="res://music/Genki_es_ka.2.mp3" id="3_inedl"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vvtlp")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(2.1, 2.1)
texture = ExtResource("1_nuujm")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -220.0
offset_right = -18.0
offset_bottom = -119.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
text = "Play"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
text = "Options"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
text = "Exit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_inedl")
autoplay = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -168.0
offset_right = -77.9999
offset_bottom = 23.0
grow_horizontal = 2
scale = Vector2(5, 5)
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 0, 0, 1)
text = "Voxel Skate"

[node name="MarginContainer2" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.9999
offset_top = -220.0
offset_right = 8.00006
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="Man" type="Button" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
text = "Man"

[node name="Alien" type="Button" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
text = "Alien"

[node name="Back" type="Button" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
text = "Back"

[node name="MarginContainer3" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.9999
offset_top = -220.0
offset_right = 31.0001
offset_bottom = -119.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer3"]
layout_mode = 2

[node name="City" type="Button" parent="MarginContainer3/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
text = "City"

[node name="Mars" type="Button" parent="MarginContainer3/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
text = "Mars"

[node name="Back3" type="Button" parent="MarginContainer3/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
text = "Back"

[node name="MarginContainer4" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.9999
offset_top = -220.0
offset_right = 31.0001
offset_bottom = -119.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer4"]
layout_mode = 2

[node name="City2" type="Button" parent="MarginContainer4/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
text = "City"

[node name="Mars2" type="Button" parent="MarginContainer4/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
text = "Mars"

[node name="Back2" type="Button" parent="MarginContainer4/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
text = "Back"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/Man" to="." method="_on_man_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/Alien" to="." method="_on_alien_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer3/VBoxContainer/City" to="." method="_on_city_pressed"]
[connection signal="pressed" from="MarginContainer3/VBoxContainer/Mars" to="." method="_on_mars_pressed"]
[connection signal="pressed" from="MarginContainer3/VBoxContainer/Back3" to="." method="_on_back_3_pressed"]
[connection signal="pressed" from="MarginContainer4/VBoxContainer/City2" to="." method="_on_city_2_pressed"]
[connection signal="pressed" from="MarginContainer4/VBoxContainer/Mars2" to="." method="_on_mars_2_pressed"]
[connection signal="pressed" from="MarginContainer4/VBoxContainer/Back2" to="." method="_on_back_2_pressed"]
